added score field and updated docs
